--- a/Views/Vista2.xaml
+++ b/Views/Vista2.xaml
@@ -3,10 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="aburbanotll3.Views.Vista2"
              Title="Vista2">
-    <VerticalStackLayout>
+    <VerticalStackLayout Padding="20" Spacing="10">
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Visualización de datos y cálculo IESS "
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center"
+            FontSize="Title"
+            Margin=" 0,0,0,40"/>
+
+        <Image Source="iees.png" HeightRequest="100"/>
+
+        <Label x:Name="lblIdentificacion" TextColor="#D7263D" FontSize="Body"/>
+        <Label x:Name="lblNombres" TextColor="#D7263D" FontSize="Body"/>
+        <Label x:Name="lblApellidos" TextColor="#D7263D" FontSize="Body"/>
+        <Label x:Name="lblCorreo" TextColor="#D7263D" FontSize="Body"/>
+        <Label x:Name="lblSalario" TextColor="#D7263D" FontSize="Body"/>
+        <Label x:Name="lblAporte" TextColor="#D7263D" FontSize="Body"/>
+
+
+        <Button Margin="60,40,60,40" x:Name="btnExportar" Text="Exportar a .txt" TextColor="White" BackgroundColor="#D7263D" Clicked="btnExportar_Clicked"/>
+        
     </VerticalStackLayout>
 </ContentPage>
